--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
+    "ng-table": "^3.0.1",
     "moment": "^2.17.1"
   },
   "engines": {
