--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.1",
+    "angular-chart.js": "^1.1.1",
     "angular-loading-bar": "^0.9.0",
     "angular-local-storage": "^0.5.0",
     "angular-messages": "^1.6.1",
@@ -30,10 +31,11 @@
     "angular-ui-bootstrap": "^2.4.0",
     "angular-ui-router": "^0.3.2",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.5.0",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
-    "ng-table": "^3.0.1",
-    "moment": "^2.17.1"
+    "moment": "^2.17.1",
+    "ng-table": "^3.0.1"
   },
   "engines": {
     "node": "7.3.0"
